Mejora del Dashboard

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -13,48 +13,47 @@
     <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
       <!-- Título de la tarjeta principal -->
       <h2 class="text-lg font-semibold text-white mb-6">
-        ESTADISTICA EN HECTAREAS
+        ESTADISTICA EN HECTAREAS (CAFE & CACAO)
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
         <!-- Meta Total -->
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
-          <p class="text-sm font-medium leading-6 text-white">META EN HECTAREAS</p>
-          <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">43,364</span>
-          </p>
+        <div
+          class="flex items-center justify-between rounded-2xl bg-gray-800 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">META</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">43,364</p>
+          </div>
+          <img src="assets/images/dashboard/meta.png" alt="icono" class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
         <!-- Hectáreas Total en Cultivos -->
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
-          <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL DE CULTIVOS (ha)</p>
-          <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">
-              {{ totalAreaCultivo | number : "1.0-0" }}
-            </span>
-          </p>
+        <div
+          class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CAFE & CACAO</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalAreaCultivo | number : "1.0-0"
+              }}</p>
+          </div>
+          <img src="assets/images/dashboard/avance.png" alt="icono" class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
         <!-- Hectáreas de Café -->
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
-          <img src="assets/img/cafe.webp" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Café">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL EN CULTIVO DE CAFE (ha)</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalAreaCafe | number : "1.0-0" }}
-              </span>
-            </p>
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CAFE</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalAreaCafe | number : "1.0-0"
+              }}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cafe.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
         <!-- Hectáreas de Cacao -->
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
-          <img src="assets/img/cacao.jpg" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Cacao">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">AVANCE TOTAL EN CULTIVO DE CACAO (ha)</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalAreaCacao | number : "1.0-0" }}
-              </span>
-            </p>
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CACAO</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalAreaCacao | number : "1.0-0"
+              }}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cacao.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
       </div>
     </div>
@@ -87,25 +86,28 @@
     <!-- ESTADISTICA SOBRE FAMILIAS -->
     <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
       <h2 class="text-lg font-semibold text-white mb-6">
-        ESTADISTICA EN PARTICIPANTES
+        ESTADISTICA EN PARTICIPANTES EN CULTIVOS DE CAFE & CACAO
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-5 cursor-pointer">
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
-          <p class="text-sm font-medium leading-6 text-white">META DE PARTICIPANTES</p>
-          <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">
-              38,313
-            </span>
-          </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">META</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">38,313</p>
+          </div>
+          <img src="assets/images/dashboard/meta.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
-          <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES</p>
-          <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">
-              {{ totalRegistrosUnicosDNI["total"] | number : "1.0-0" }}
-            </span>
-          </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalRegistrosUnicosDNI["total"] | number : "1.0-0" }}</p>
+          </div>
+          <img src="assets/images/dashboard/avance.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
+
         <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
           <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES - CAFE & CACAO</p>
           <p class="mt-2 flex items-baseline gap-x-2">
@@ -114,31 +116,28 @@
             </span>
           </p>
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
-          <img src="assets/img/cafe.webp" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Café">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES - CAFE</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalRegistrosUnicosDNI["cafe"] | number : "1.0-0" }}
-              </span>
-            </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CAFE</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalRegistrosUnicosDNI["cafe"] | number : "1.0-0" }}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cafe.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden">
-          <img src="assets/img/cacao.jpg" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Cacao">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">TOTAL DE PARTICIPANTES - CACAO</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalRegistrosUnicosDNI["cacao"] | number : "1.0-0" }}
-              </span>
-            </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CACAO</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalRegistrosUnicosDNI["cacao"] | number : "1.0-0" }}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cacao.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
       </div>
     </div>
     <!-- FIN ESTADISTICA SOBRE FAMILIAS -->
+
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
@@ -155,47 +154,45 @@
     <!-- ESTADISTICA POLIGONOS -->
     <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
       <h2 class="text-lg font-semibold text-white mb-6">
-        ESTADISTICA EN POLIGONOS
+        ESTADISTICA EN POLIGONOS DE CAFE & CACAO
       </h2>
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4 cursor-pointer">
-        <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10">
-          <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS DE CULTIVOS</p>
-          <p class="mt-2 flex items-baseline gap-x-2">
-            <span class="text-4xl font-semibold tracking-tight text-green-400">
-              {{ totalRegistrosCultivos | number : "1.0-0" }}
-            </span>
-          </p>
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalRegistrosCultivos | number : "1.0-0" }}</p>
+          </div>
+          <img src="assets/images/dashboard/avance.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
+
         <div class="rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
-          <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS EN PROCESO</p>
+          <p class="text-xl font-medium leading-6 text-white">EN PROCESO</p>
           <p class="mt-2 flex items-baseline gap-x-2">
             <span class="text-4xl font-semibold tracking-tight text-green-400">
               {{ totalRegistrosUnicosDNI[""] | number : "1.0-0" }}
             </span>
           </p>
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
-          <img src="assets/img/cafe.webp" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Café">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS - CAFE</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalCafe | number : "1.0-0" }}
-              </span>
-            </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CAFE</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalCafe | number : "1.0-0"}}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cafe.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
-        <div class="relative rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 overflow-hidden cursor-pointer">
-          <img src="assets/img/cacao.jpg" class="absolute inset-0 h-full w-full object-cover opacity-30" alt="Cacao">
-          <div class="relative">
-            <p class="text-sm font-medium leading-6 text-white">TOTAL DE POLIGONOS - CACAO</p>
-            <p class="mt-2 flex items-baseline gap-x-2">
-              <span class="text-4xl font-semibold tracking-tight text-white">
-                {{ totalCacao | number : "1.0-0" }}
-              </span>
-            </p>
+
+        <div class="flex items-center justify-between rounded-2xl bg-gray-900 p-6 shadow ring-1 ring-white/10 cursor-pointer">
+          <div>
+            <p class="text-xl font-medium leading-6 text-white">AVANCE CACAO</p>
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-green-400">{{ totalCacao | number : "1.0-0"}}</p>
           </div>
+          <img src="assets/images/dashboard/grano_cacao.png" alt="icono"
+            class="w-16 h-16 opacity-80 rounded-full drop-shadow-[0_0_10px_white]">
         </div>
+
       </div>
     </div>
     <!-- FIN ESTADISTICA POLIGONOS -->
