--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -6,8 +6,8 @@
   <app-sidemenu *ngIf="isMenuOpen || isDesktop" class="w-full md:w-64 bg-[#323232] md:h-full"></app-sidemenu>
   <!-- 📊 Contenido principal -->
   <div class="flex-1 min-w-0 pt-4 pr-6 pb-6 pl-6 overflow-y-auto space-y-4">
-    <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-white bg-[#0DA642] px-4 py-2 rounded-lg shadow-md">
-      Fecha de actualización 30 de julio 2025
+    <h1 class="text-base sm:text-lg md:text-xl font-bold text-white bg-[#0DA642] px-3 py-1.5 rounded-lg shadow-md">
+      Información vigente al 30 de julio 2025
     </h1>
     <!-- ESTADISTICA SOBRE HECTAREAS -->
     <div class="rounded-2xl bg-[#0D9BD7] p-6 shadow-md ring-1 ring-gray-200">
