Mejora de graficos para pantallas de 34 pulgadas

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -60,11 +60,11 @@
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
-        <div class="w-full aspect-square max-w-sm mx-auto">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMeta" class="w-full h-full"></canvas>
         </div>
         <!-- Gráfico 2 (barras horizontales) -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMetaOZ" class="w-full h-full"></canvas>
         </div>
       </div>
@@ -72,11 +72,11 @@
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMetaOZCAFE" class="w-full h-full"></canvas>
         </div>
         <!-- Gráfico 2 (barras horizontales) -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMetaOZCACAO" class="w-full h-full"></canvas>
         </div>
       </div>
@@ -139,11 +139,11 @@
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
-        <div class="w-full aspect-square max-w-sm mx-auto">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMetaDNI" class="w-full h-full"></canvas>
         </div>
         <!-- Gráfico 2 (barras horizontales) -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoMetaParticipantes" class="w-full h-full"></canvas>
         </div>
       </div>
@@ -153,11 +153,11 @@
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoCantidadDNIOZCAFE" class="w-full h-full"></canvas>
         </div>
         <!-- Gráfico 2 (barras horizontales) -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoCantidadDNIOZCACAO" class="w-full h-full"></canvas>
         </div>
       </div>
@@ -212,11 +212,11 @@
     <div class="bg-white rounded-2xl shadow-lg border p-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-1">
         <!-- Gráfico 1 -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoCantidadOZCAFE" class="w-full h-full"></canvas>
         </div>
         <!-- Gráfico 2 (barras horizontales) -->
-        <div class="w-full max-w-3xl mx-auto h-[400px]">
+        <div class="w-full h-[280px] sm:h-[380px] md:h-[450px] lg:h-[500px] 3xl:h-[650px] max-w-full mx-auto">
           <canvas id="graficoCantidadOZCACAO" class="w-full h-full"></canvas>
         </div>
       </div>
