Mejora del Spinner

--- a/src/app/geovisor/geovisor.component.html
+++ b/src/app/geovisor/geovisor.component.html
@@ -1,5 +1,5 @@
 
-<ngx-spinner bdColor="rgba(32, 145, 199, 0.95)" size="large" color="#125230">
+<ngx-spinner type="ball-clip-rotate" bdColor="rgba(32, 145, 199, 0.95)" size="large" color="#125230">
   <div style="position: relative;
       display: flex;
       flex-direction: column;
