--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,8 @@ body {
 
 /* === ArcGIS UI Ajustes === */
 .esri-ui-top-right.esri-ui-corner {
-  top: 80px;
+  top: 50%; /* Coloca el borde superior del elemento en el centro vertical */
+  transform: translateY(-50%); /* Mueve el elemento hacia arriba la mitad de su propia altura */
 }
 
 .esri-widget {
