--- a/src/app/geovisor/pages/map/map.component.html
+++ b/src/app/geovisor/pages/map/map.component.html
@@ -5,12 +5,12 @@
   <!-- Aquí el mapa -->
 
 
-  <input
+  <!-- <input
     type="file"
     (change)="onFileSelected($event)"
     accept=".kml,.kmz,.geojson,.json,.csv,.zip"
     class="absolute top-4 left-4 z-50 border rounded p-2 bg-white"
-  >
+  > -->
 
 
 
